[package]
name = "coutils"
version = "1.5.0"
edition = "2021"
author = ["Angel Dollface <angelbbe@proton.me>"]
license = "MIT"
description= "A set of useful functions for Rust."
homepage = "https://github.com/angeldollface/coutils"
repository = "https://github.com/angeldollface/coutils"
documentation = "https://docs.rs/coutils/1.5.0"
readme = "README.markdown"
keywords = [
  "utilities"
]
categories = [
  "utilities"
]
exclude = [
  "/.github",
  ".gitignore"
]

[dependencies]
rand = "0.8.5"
chrono = "0.4.26"
fs_extra = "1.2.0"
